--- a/PmProject-SPA/src/app/nav/nav.component.html
+++ b/PmProject-SPA/src/app/nav/nav.component.html
@@ -41,15 +41,15 @@
           <img src="{{photoUrl || '../../../../assets/user.png'}}" alt="">
         </span>
         <a class="dropdown-toggle text-light" dropdownToggle>
-          Welcome {{ authService.decodedToken?.unique_name | titlecase }}
+          คุณ {{ authService.decodedToken?.unique_name | titlecase }}
         </a>
 
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a class="dropdown-item" [routerLink]="['member/edit']">
-            <i class="fa- fa-user"></i>Edit Profile</a>
+          <!--<a class="dropdown-item" [routerLink]="['member/edit']">
+            <i class="fa- fa-user"></i>Edit Profile</a>-->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">
-            <i class="fa fa-sign-out"></i>Logout</a>
+            <i class="fa fa-sign-out"></i>ออกจากระบบ</a>
         </div>
       </div>
 
