--- a/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
+++ b/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
@@ -1,32 +1,34 @@
 <div class="add-form">
   <div mat-dialog-content>
     <div class="row">
-      <div class="col">
-        <h4>{{mode}} Project</h4>
+      <div class="col" *ngIf="mode === 'Add'">
+        <h4>เพิ่มโครงการ</h4>
+      </div>
+      <div class="col" *ngIf="mode === 'Edit'">
+        <h4>แก้ไขโครงการ</h4>
       </div>
     </div>
     <div class="form-group row mt-2">
-      <label for="projectName" class="col-sm-3 col-form-label">Project Name</label>
+      <label for="projectName" class="col-sm-3 col-form-label">ชื่อโครงการ</label>
       <div class="col-sm-9">
         <input type="text" (ngModelChange)="change()" [(ngModel)]="project.name" class="form-control" id="projectName">
       </div>
     </div>
     <div class="form-group row mt-2">
-      <label for="templateName" class="col-sm-3 col-form-label">Use Template Name</label>
+      <label for="templateName" class="col-sm-3 col-form-label">แบบฟอร์มที่ใช้งาน</label>
       <div class="col-sm-9">
         <select (ngModelChange)="change()" [(ngModel)]="project.templateServiceOrderId" class="form-control"
           id="templateName">
-          <option value="0" selected>Choose...</option>
-
+          <option value="0" selected>กรุณาเลือก...</option>
           <option *ngFor="let item of template" [value]="item.id">{{item.name}}</option>
         </select>
       </div>
     </div>
     <div class="form-group row">
-      <label for="status" class="col-sm-3 col-form-label">Status</label>
+      <label for="status" class="col-sm-3 col-form-label">สถานะโครงการ</label>
       <div class="col-sm-9">
         <select (ngModelChange)="change()" [(ngModel)]="project.status" class="form-control" id="status">
-          <option selected>Choose...</option>
+          <option selected>กรุณาเลือก...</option>
           <option value="0">Open</option>
           <option value="1">In Process</option>
           <option value="2">Hold</option>
@@ -36,9 +38,9 @@
     </div>
     <div class="row mt-4">
       <div class="col text-center">
-        <button type="button " [attr.disabled]="btnSave == true ? true : null" (click)="save()"
-          class="btn  btn-success mr-2">Save</button>
-        <button type="button" class="btn  btn-danger" mat-dialog-close>Cancel</button>
+        <button type="button" [attr.disabled]="btnSave == true ? true : null" (click)="save()"
+          class="btn  btn-success mr-2">บันทึก</button>
+        <button type="button" class="btn  btn-danger" mat-dialog-close>ยกเลิก</button>
       </div>
     </div>
   </div>
