--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/template-service-order-add-edit.component.html
@@ -1,44 +1,45 @@
 <div class="container mt-5">
   <div class="card">
-    <div class="card-header">
-      {{mode}} Template Service Oder
+    <div class="card-header" *ngIf="mode === 'Add'">
+      เพิ่มแบบฟอร์มเอกสารใบสั่งงาน
+    </div>
+    <div class="card-header" *ngIf="mode === 'Edit'">
+      แก้ไขแบบฟอร์มเอกสารใบสั่งงาน
     </div>
     <div class="card-body">
       <div class="row mb-4">
         <div class="col ">
           <div class="form-group row">
-            <label for="templateName" class="col-sm-3 col-form-label text-right">Template Name</label>
+            <label for="templateName" class="col-sm-3 col-form-label text-right">ชื่อแบบฟอร์ม</label>
             <div class="col-sm-5">
               <input type="text" [(ngModel)]="templateServiceOrder.name" class="form-control"
-                placeholder="Template Name" id="templateName">
+                placeholder="ชื่อแบบฟอร์ม" id="templateName">
             </div>
             <div class="col-sm-4">
-              <button type="button " class="btn  btn-success mr-2" (click)="save()">Save</button>
-              <button type="button" class="btn  btn-danger" [routerLink]="['/template']">Cancel</button>
+              <button type="button " class="btn  btn-success mr-2" (click)="save()">บันทึก</button>
+              <button type="button" class="btn  btn-danger" [routerLink]="['/template']">ยกเลิก</button>
             </div>
           </div>
           <div class="row mb-3">
             <div class="col">
-              <button type="button " class="btn  btn-success mr-2" (click)="openDialog()">+ Add Question</button>
+              <button type="button " class="btn  btn-success mr-2" (click)="openDialog()">+ เพิ่มหัวข้อแบบฟอร์ม</button>
             </div>
           </div>
           <div class="row">
             <div class="col">
               <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource">
-
                   <!-- Position Column -->
                   <ng-container matColumnDef="question">
-                    <th mat-header-cell *matHeaderCellDef> Question </th>
+                    <th mat-header-cell *matHeaderCellDef>หัวข้อแบบฟอร์ม</th>
                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                   </ng-container>
-
                   <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td class="text-right" mat-cell *matCellDef="let element ">
                       <button type="button " (click)="openDialogEdite(element.id)"
-                        class="btn btn-sm btn-success mr-2">Edit</button>
-                      <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                        class="btn btn-sm btn-success mr-2">แก้ไข</button>
+                      <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button>
                     </td>
                   </ng-container>
 
@@ -50,12 +51,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="row mt-4">
-            <div class="col text-center">
-              <button type="button " class="btn  btn-success mr-2">Save</button>
-              <button type="button" class="btn  btn-danger" [routerLink]="['/template']">Cancel</button>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
