--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -8,18 +8,18 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Project
+        โครงการ
       </div>
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Project</button>
-            <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
+            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">เพิ่มโครงการ</button>
+            <button type="button" (click)="deleteSelected()" class="btn btn-danger">ลบโครงการ</button>
           </div>
           <div class="col-6 text-right">
             <mat-form-field>
-              <mat-label>search</mat-label>
-              <input matInput (keyup)="applyFilter($event)" placeholder="search" #input>
+              <mat-label>ค้นหา</mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="ค้นหา" #input>
             </mat-form-field>
           </div>
         </div>
@@ -43,13 +43,13 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อโครงการ</th>
+                  <td mat-cell *matCellDef="let element" data-label="ชื่อโครงการ"> {{element.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="templateServiceOrder">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Use Template Name">
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>แบบฟอร์มที่ใช้งาน</th>
+                  <td mat-cell *matCellDef="let element" data-label="แบบฟอร์มที่ใช้งาน">
                     {{element.templateServiceOrder.name}} </td>
                 </ng-container>
 
@@ -59,16 +59,16 @@
                     <a (click)="export(element.id)">Export</a> </td>
                 </ng-container>
                 <ng-container matColumnDef="serviceOrder">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Service </th>
-                  <td mat-cell *matCellDef="let element" data-label="Service">
-                    <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i> Service</a> </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>ข้อมูลใบสั่งงาน</th>
+                  <td mat-cell *matCellDef="let element" data-label="ข้อมูลใบสั่งงาน">
+                    <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i>เพิ่มใบสั่งงาน</a> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
-                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Edit</button>
-                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
+                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button>
                   </td>
                 </ng-container>
 
