--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -2,27 +2,27 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        {{mode}} Service Order
+        {{mode}} ใบสั่งงาน
       </div>
       <div class="card-body">
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Service Order</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">หมายเลขใบสั่งงาน</label>
           <div class="col-sm-10">
             <div class="form-control">{{serviceOrder.serviceOrderNo}}</div>
           </div>
         </div>
 
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Description</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">รายละเอียดใบสั่งงาน</label>
           <div class="col-sm-10">
             <div class="form-control">{{serviceOrder.description}}</div>
           </div>
         </div>
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Status</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">สถานะ</label>
           <div class="col-sm-10">
             <select [(ngModel)]="serviceOrder.status" class="form-control" id="status">
-              <option selected>Choose...</option>
+              <option selected>กรุณาเลือก...</option>
               <option value="0">Open</option>
               <option value="1">In Process</option>
               <option value="2">Hold</option>
@@ -36,12 +36,12 @@
           <div class="col-12 col-md-12">
             <div class="card">
               <div class="card-header">
-                Qustion
+                รายละเอียดใบสั่งงาน
               </div>
               <div class="card-body">
 
                 <ng-container *ngFor="let question of questionList">
-                  <ng-container *ngIf="question.answerTypeId === 1">
+                  <ng-container *ngIf="question.answerTypeId === '1'">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label for="inputEmail4">{{question.name}}</label>
@@ -49,7 +49,7 @@
                       </div>
                     </div>
                   </ng-container>
-                  <ng-container *ngIf="question.answerTypeId === 2">
+                  <ng-container *ngIf="question.answerTypeId === '2'">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label>{{question.name}}</label>
@@ -66,7 +66,7 @@
                       </div>
                     </div>
                   </ng-container>
-                  <ng-container *ngIf="question.answerTypeId === 3">
+                  <ng-container *ngIf="question.answerTypeId === '3'">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label>{{question.name}}</label>
@@ -89,13 +89,12 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Upload Image</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">อัพโหลดรูปภาพ</label>
           <div class="col-sm-10">
             <div class="custom-file">
               <input type="file" class="custom-file-input" (change)="handleFileInput($event.target.files)" multiple
                 accept="image/png, image/jpeg" id="inputGroupFile02">
-              <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Choose
-                file</label>
+              <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">เลือกรูปภาพ</label>
             </div>
           </div>
         </div>
@@ -136,8 +135,8 @@
         </div>
         <div class="form-group row">
           <div class="col-sm-12 text-center">
-            <button type="button " (click)="seve()" class="btn  btn-success mr-2">Save</button>
-            <button type="button" class="btn  btn-danger" [routerLink]="['/service-order/technician']">Cancel</button>
+            <button type="button " (click)="seve()" class="btn  btn-success mr-2">บันทึก</button>
+            <button type="button" class="btn  btn-danger" [routerLink]="['/service-order/technician']">ยกเลิก</button>
           </div>
         </div>
       </div>
