--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician.component.html
@@ -2,15 +2,15 @@
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Open">
       <mat-list>
-        <div mat-subheader>Order</div>
+        <div mat-subheader>ใบสั่งงาน</div>
         <ng-container *ngFor="let item of serviceOrder">
-          <ng-container *ngIf="item.status === 0">
+          <ng-container *ngIf="item.status === '0'">
             <mat-list-item>
               <mat-icon mat-list-icon><i class="fas fa-briefcase"></i></mat-icon>
               <div mat-line><a [routerLink]="['/service-order/technician/' + item.id +'/'+item.projectId]"
                   routerLinkActive="router-link-active">{{item.description}}</a>
               </div>
-              <div mat-line>No. {{item.serviceOrderNo }} </div>
+              <div mat-line>หมายเลขใบสั่งงาน {{item.serviceOrderNo }} </div>
             </mat-list-item>
           </ng-container>
         </ng-container>
@@ -19,15 +19,15 @@
     </mat-tab>
     <mat-tab label="In Process">
       <mat-list>
-        <div mat-subheader>Order</div>
+        <div mat-subheader>ใบสั่งงาน</div>
         <ng-container *ngFor="let item of serviceOrder">
-          <ng-container *ngIf="item.status === 1">
+          <ng-container *ngIf="item.status === '1'">
             <mat-list-item>
               <mat-icon mat-list-icon><i class="fas fa-briefcase"></i></mat-icon>
               <div mat-line><a [routerLink]="['/service-order/technician/' + item.id +'/'+item.projectId]"
                   routerLinkActive="router-link-active">{{item.description}}</a>
               </div>
-              <div mat-line>No. {{item.serviceOrderNo }} </div>
+              <div mat-line>หมายเลขใบสั่งงาน {{item.serviceOrderNo }} </div>
             </mat-list-item>
           </ng-container>
         </ng-container>
@@ -37,15 +37,15 @@
 
     <mat-tab label="Hold">
       <mat-list>
-        <div mat-subheader>Order</div>
+        <div mat-subheader>ใบสั่งงาน</div>
         <ng-container *ngFor="let item of serviceOrder">
-          <ng-container *ngIf="item.status === 2">
+          <ng-container *ngIf="item.status === '2'">
             <mat-list-item>
               <mat-icon mat-list-icon><i class="fas fa-briefcase"></i></mat-icon>
               <div mat-line><a [routerLink]="['/service-order/technician/' + item.id +'/'+item.projectId]"
                   routerLinkActive="router-link-active">{{item.description}}</a>
               </div>
-              <div mat-line>No. {{item.serviceOrderNo }} </div>
+              <div mat-line>หมายเลขใบสั่งงาน {{item.serviceOrderNo }} </div>
             </mat-list-item>
           </ng-container>
         </ng-container>
@@ -55,15 +55,15 @@
 
     <mat-tab label="Close">
       <mat-list>
-        <div mat-subheader>Order</div>
+        <div mat-subheader>ใบสั่งงาน</div>
         <ng-container *ngFor="let item of serviceOrder">
-          <ng-container *ngIf="item.status === 3">
+          <ng-container *ngIf="item.status === '3'">
             <mat-list-item>
               <mat-icon mat-list-icon><i class="fas fa-briefcase"></i></mat-icon>
               <div mat-line><a [routerLink]="['/service-order/technician/' + item.id +'/'+item.projectId]"
                   routerLinkActive="router-link-active">{{item.description}}</a>
               </div>
-              <div mat-line>No. {{item.serviceOrderNo }} </div>
+              <div mat-line>หมายเลขใบสั่งงาน {{item.serviceOrderNo }} </div>
             </mat-list-item>
           </ng-container>
         </ng-container>
