--- a/PmProject-SPA/src/app/technician/technician.component.html
+++ b/PmProject-SPA/src/app/technician/technician.component.html
@@ -8,18 +8,18 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Technician
+        ข้อมูลช่าง
       </div>
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Technician</button>
-            <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
+            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">เพิ่มข้อมูลช่าง</button>
+            <button type="button" (click)="deleteSelected()" class="btn btn-danger">ลบข้อมูลช่าง</button>
           </div>
           <div class="col-6 text-right">
             <mat-form-field>
-              <mat-label>search</mat-label>
-              <input matInput (keyup)="applyFilter($event)" placeholder="search" #input>
+              <mat-label>ค้นหา</mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="ค้นหา" #input>
             </mat-form-field>
           </div>
         </div>
@@ -43,12 +43,12 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 50%;" mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
+                  <th style="width: 50%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อ-นามสกุล </th>
                   <td mat-cell *matCellDef="let element" data-label="Technician Name"> {{element.fullName}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="phoneNumber">
-                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>Phone Number </th>
+                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>เบอร์โทรศัพท์ </th>
                   <td mat-cell *matCellDef="let element" data-label="Use Template Name">
                     {{element.phoneNumber}} </td>
                 </ng-container>
@@ -56,8 +56,8 @@
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
-                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Edit</button>
-                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
+                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button>
                   </td>
                 </ng-container>
 
