--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -41,7 +41,7 @@
               <div class="card-body">
 
                 <ng-container *ngFor="let question of questionList">
-                  <ng-container *ngIf="question.answerTypeId === '1'">
+                  <ng-container *ngIf="question.answerTypeId === 1">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label for="inputEmail4">{{question.name}}</label>
@@ -49,7 +49,7 @@
                       </div>
                     </div>
                   </ng-container>
-                  <ng-container *ngIf="question.answerTypeId === '2'">
+                  <ng-container *ngIf="question.answerTypeId === 2">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label>{{question.name}}</label>
@@ -66,7 +66,7 @@
                       </div>
                     </div>
                   </ng-container>
-                  <ng-container *ngIf="question.answerTypeId === '3'">
+                  <ng-container *ngIf="question.answerTypeId === 3">
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label>{{question.name}}</label>
@@ -94,7 +94,8 @@
             <div class="custom-file">
               <input type="file" class="custom-file-input" (change)="handleFileInput($event.target.files)" multiple
                 accept="image/png, image/jpeg" id="inputGroupFile02">
-              <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">เลือกรูปภาพ</label>
+              <label class="custom-file-label" for="inputGroupFile02"
+                aria-describedby="inputGroupFileAddon02">เลือกรูปภาพ</label>
             </div>
           </div>
         </div>
