--- a/PmProject-SPA/src/app/service-order/service-order.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order.component.html
@@ -44,27 +44,32 @@
                 </ng-container>
 
                 <ng-container matColumnDef="serviceOrderNo">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>หมายเลขใบสั่งงาน</th>
+                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>หมายเลขใบสั่งงาน</th>
                   <td mat-cell *matCellDef="let element" data-label="หมายเลขใบสั่งงาน"> {{element.serviceOrderNo}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="description">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>รายละเอียดใบสั่งงาน</th>
+                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>รายละเอียดใบสั่งงาน</th>
                   <td mat-cell *matCellDef="let element" data-label="รายละเอียดใบสั่งงาน"> {{element.description}} </td>
                 </ng-container>
 
+                <ng-container matColumnDef="project">
+                  <th style="width: 15%;" mat-header-cell *matHeaderCellDef mat-sort-header>โครงการ</th>
+                  <td mat-cell *matCellDef="let element" data-label="โครงการ"> {{element.project.name}} </td>
+                </ng-container>
+
                 <ng-container matColumnDef="status">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>สถานะใบสั่งงาน</th>
+                  <th style="width: 15%;" mat-header-cell *matHeaderCellDef mat-sort-header>สถานะใบสั่งงาน</th>
                   <td mat-cell *matCellDef="let element" data-label="Status">
-                    <p *ngIf="element.status === 0">Open</p>
-                    <p *ngIf="element.status === 1">In Process</p>
-                    <p *ngIf="element.status === 2">Hold</p>
-                    <p *ngIf="element.status === 3">Close</p>
+                    <div *ngIf="element.status === 0">Open</div>
+                    <div *ngIf="element.status === 1">In Process</div>
+                    <div *ngIf="element.status === 2">Hold</div>
+                    <div *ngIf="element.status === 3">Close</div>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
-                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
                     <button type="button " (click)="edit(element.id, element.projectId)"
                       class="btn btn-sm btn-success mr-2">แก้ไข</button>
