--- a/PmProject-SPA/src/styles.scss
+++ b/PmProject-SPA/src/styles.scss
@@ -61,7 +61,7 @@
   color: red;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Sarabun', sans-serif; }
 
 body {
   background: #f8f8f8;
