--- a/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
+++ b/PmProject-SPA/src/app/project/project-add-edit/project-add-edit.component.html
@@ -24,9 +24,9 @@
         </select>
       </div>
     </div>
-    <div class="form-group row">
+    <!--  <div class="form-group row">
       <label for="status" class="col-sm-3 col-form-label">สถานะโครงการ</label>
-      <div class="col-sm-9">
+     <div class="col-sm-9">
         <select (ngModelChange)="change()" [(ngModel)]="project.status" class="form-control" id="status">
           <option selected>กรุณาเลือก...</option>
           <option value="0">Open</option>
@@ -35,7 +35,7 @@
           <option value="3">Close</option>
         </select>
       </div>
-    </div>
+    </div> -->
     <div class="row mt-4">
       <div class="col text-center">
         <button type="button" [attr.disabled]="btnSave == true ? true : null" (click)="save()"
