--- a/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order-add-edit/question-add/question-add.component.html
@@ -9,33 +9,45 @@
       <label for="question" class="col-sm-3 col-form-label">หัวข้อแบบฟอร์ม</label>
       <div class="col-sm-9">
         <input [(ngModel)]="question.name" type="text" class="form-control" id="question">
+        <div *ngIf="question.name === '' && submited" style="display: unset;" class="invalid-feedback">
+          กรุณากรอกค่าหัวข้อแบบฟอร์ม.
+        </div>
       </div>
     </div>
     <div class="form-group row">
       <label for="answerType" class="col-sm-3 col-form-label">ประเภทตัวเลือก</label>
       <div class="col-sm-9">
         <select [(ngModel)]="question.answerTypeId" class="form-control" id="answerType">
-          <option selected>กรุณาเลือก...</option>
+          <!-- <option selected>กรุณาเลือก...</option> -->
           <option value="1">ตัวเลือกแบบกรอกข้อมูล</option>
           <option value="2">ตัวเลือกแบบเลือกได้ 1 คำตอบ</option>
           <option value="3">ตัวเลือกแบบเลือกได้มากกว่า 1 คำตอบ</option>
         </select>
       </div>
     </div>
-    <div class="form-group row" *ngFor="let item of question?.templateServiceOrderAnswer; let i = index">
-      <label for="choice" class="col-sm-3 col-form-label">ตัวเลือก {{i + 1}}</label>
-      <div class="col-sm-9">
-        <input type="text" [(ngModel)]="item.answer" class="form-control">
+    <ng-container *ngIf="question.answerTypeId !== '1'">
+      <div class="form-group row" *ngFor="let item of question?.templateServiceOrderAnswer; let i = index">
+        <label for="choice" class="col-sm-3 col-form-label">ตัวเลือก {{i + 1}} *</label>
+        <div class="col-sm-9">
+          <input type="text" #name [(ngModel)]="item.answer" class="form-control">
+          <div *ngIf="question?.templateServiceOrderAnswer[i].answer === '' && submited" style="display: unset;"
+            class="invalid-feedback">
+            กรุณากรอกค่าตัวเลือก.
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col text-right">
-        <a (click)="addChoice()" class="add-choice-btn">+</a>
+      <div class="row">
+        <div class="col text-right">
+          <a (click)="addChoice()" class="add-choice-btn">+</a>
+        </div>
       </div>
-    </div>
+    </ng-container>
+
     <div class="row mt-4">
       <div class="col text-center">
-        <button type="button " class="btn  btn-success mr-2" [mat-dialog-close]="question" cdkFocusInitial>บันทึก</button>
+        <!-- <button type="button " class="btn  btn-success mr-2" [mat-dialog-close]="question"
+          cdkFocusInitial>บันทึก</button> -->
+        <button type="button " class="btn  btn-success mr-2" (click)="onOk()">บันทึก</button>
         <button type="button" class="btn  btn-danger" (click)="onNoClick()">ยกเลิก</button>
       </div>
     </div>
